--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -3,4 +3,10 @@
     <string name="app_name">AndroidAssignments</string>
     <string name="hello_message">你好!</string>
     <string name="ButtonText">I\’m a button</string>
+    <string name="login_textView">登录</string>
+    <string name="login_name">用户名</string>
+    <string name="password">密码</string>
+    <string name="radio_button">广播按钮</string>
+    <string name="check_box">复选框</string>
+    <string name="switch_message">这是用来干什么的?</string>
 </resources>
