--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -18,5 +18,8 @@
     <string name="switch_off">関</string>
     <string name="preference_name">偏好設定</string>
     <string name="email_key">鍵</string>
+    <string name="start_chat">开始聊天</string>
+    <string name="send_message">发送</string>>
+    <string name="new_text">新信息</string>
 
 </resources>
