--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,9 @@
     <string name="switch_off">Switch is Off</string>
     <string name="preference_name">my_preference</string>
     <string name="email_key">email_key</string>
+    <string name="start_chat">Start Chat</string>
+    <string name="send_message">SEND</string>>
+    <string name="new_text">New Text</string>
 
 
 </resources>
