Finished Assignment3, part 2

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -36,5 +36,9 @@
 
     <string name="hello_first_fragment">你好第一个部分</string>
     <string name="hello_second_fragment">你好第二个部分</string>
+    <string name="weather_forecast">天气预报</string>
+    <string name="current_temperature">当前温度</string>
+    <string name="min_temperature">最小温度</string>
+    <string name="max_temperature">最大温度</string>
 
 </resources>
